--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "tystudy/yii2-swoole-websocket",
-    "description": "专注于swoole的websocket服务器 不修改yii2",
+    "description": "利用swoole搭建了websocket服务器  不修改yii2直接使用",
     "type": "yii2-extension",
     "keywords": ["yii2","extension","swoole","websocket"],
     "license": "MIT",
